@ekynoxe - Fixing content disappearing behind menu after navigation.

--- a/robot-revolution/src/sass/_base.scss
+++ b/robot-revolution/src/sass/_base.scss
@@ -51,6 +51,12 @@ a, a:hover {
     position: relative;
 }
 
+@media (max-width: $l) {
+    .content--scene {
+        padding-bottom: $itemSpacingVertical;
+    }
+}
+
 @media (min-width: $l) {
     .content {
         max-width: 980px;
